--- a/Assignments/Intensity Transformations and Neighborhood Filtering/210668P_A01.ipynb
+++ b/Assignments/Intensity Transformations and Neighborhood Filtering/210668P_A01.ipynb
@@ -814,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -830,7 +830,7 @@
    ],
    "source": [
     "# Threshold the Value plane to create a mask for the foreground\n",
-    "_, mask = cv2.threshold(value, 120, 255, cv2.THRESH_BINARY)\n",
+    "ret, mask = cv2.threshold(value, 120, 255, cv2.THRESH_BINARY)\n",
     "\n",
     "# Display the mask\n",
     "plt.imshow(mask, cmap='gray')\n",
